--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>my second github repo</title>
 </head>
 <body>
+    <h1>I can push to github</h1>
+    <h2>mama how are you</h2>
+    <h3>new code change</h3>
+
     
 </body>
 </html>
