--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>I can push to github</h1>
     <h2>mama how are you</h2>
     <h3>new code change</h3>
-
+    <p>more paragraph</p>
+    <p>I am coading and coading</p>
+    <p>i am so happy because i found my happyness</p> 
+    
     
 </body>
 </html>
