--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h3>new code change</h3>
     <p>more paragraph</p>
     <p>I am coading and coading</p>
-    <p>i am so happy because i found my happyness</p> 
-    
-    
+    <p>i am so happy because i found my happyness</p>
+     <img src="dadi.jpg" alt="">
+     <img src="download.jpg" alt="">
 </body>
 </html>
